src/objects/Int_Collateral__c.object
<CustomObject>
    <description>Int Collateral</description>
    <fields>
        <fullName>Coll_Government_Type_Code__c</fullName>
        <description>Coll Government Type Code</description>
        <label>Coll Government Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Maturity_Date__c</fullName>
        <description>Coll Maturity Date</description>
        <label>Coll Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coll_Original_Amount__c</fullName>
        <description>Coll Original Amount</description>
        <label>Coll Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coll_Original_Valuation_Date__c</fullName>
        <description>Coll Original Valuation Date</description>
        <label>Coll Original Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coll_Percentage__c</fullName>
        <description>Coll Percentage</description>
        <label>Coll Percentage</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Coll_Valuation_Approach_Code__c</fullName>
        <description>Coll Valuation Approach Code</description>
        <label>Coll Valuation Approach Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coll_Valuation_Date__c</fullName>
        <description>Coll Valuation Date</description>
        <label>Coll Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coll_Valuation_Type_Code__c</fullName>
        <description>Coll Valuation Type  Code</description>
        <label>Coll Valuation Type  Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Number__c</fullName>
        <description>Collateral Number</description>
        <label>Collateral Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Source_System__c</fullName>
        <description>Collateral Source System</description>
        <label>Collateral Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <description>Collateral Type</description>
        <label>Collateral Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colleteral_Amount__c</fullName>
        <description>Colleteral Amount</description>
        <label>Colleteral Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code</description>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Master_Asset_Type__c</fullName>
        <description>Global Master Asset Type</description>
        <label>Global Master Asset Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Residual_Value__c</fullName>
        <description>Net Residual Value</description>
        <label>Net Residual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Int Collateral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Collateral_Source_System__c</columns>
        <columns>Collateral_Number__c</columns>
        <columns>Collateral_Type__c</columns>
        <columns>Currency_Code__c</columns>
        <columns>Colleteral_Amount__c</columns>
        <columns>Global_Master_Asset_Type__c</columns>
        <columns>Net_Residual_Value__c</columns>
        <columns>Coll_Percentage__c</columns>
        <columns>Coll_Maturity_Date__c</columns>
        <columns>Coll_Original_Valuation_Date__c</columns>
        <columns>Coll_Valuation_Date__c</columns>
        <columns>Coll_Original_Amount__c</columns>
        <columns>Coll_Valuation_Type_Code__c</columns>
        <columns>Coll_Valuation_Approach_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COL-{0000000000}</displayFormat>
        <label>Collateral Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>